Fix for drawing religions into lakes and water clipping for biomes and cultures

--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ button, select, a {
 	pointer-events: none;
 }
 
-#statesBody, #provincesBody {
+#statesBody, #provincesBody, #relig, #biomes, #cults {
 	stroke-width: .6;
 	fill-rule: evenodd;
 	mask: url(#land);
